# live_net

./: .env  .gitmodules  LICENCE  LICENCE.txt  README.md  __init__.py  calibration.py  check_prob.ipynb  cifar10.ipynb  cifar_arch.py  dev.ipynb  hm.txt  mnist.ipynb  pr.py  pyproject.toml  pytest.ini  regularizer_l1_assymetric.py  requirements.in  requirements.txt  run_func.py  score.txt  stable_norm.py  t.py  test.ipynb  test.py  test.py.orig  test_cifar_4x4.ipynb  test_if.ipynb  test_mnist4.ipynb  torch_optimizer.py
ai_libs/: README.md  __init__.py  simple_log.py
ai_libs/basic/: README.md  __init__.py  deep_reload.py  even_more_itertools.py  more_functools.py  more_hash.py  more_math.py  more_threading.py
life/: cifar10.ipynb  gen_utils.py  mnist4.ipynb  quick.ipynb  system_test.py  test.ipynb  test.py  test1.ipynb  test1.py  test1_old.ipynb  test2.ipynb  testvs.py  xor.py
life/lib/: __init__.py  datasets.py  death.py  gen_utils.py  graph.py  livenet.py  nets.py  optimizer.py  simple_log.py  stat_utils.py  test_livenet.py  trainer.py  utils.py
livenet/: __init__.py  data_augment.py  datasets.py  dev.py  gen_utils.py  net_trainer.py  nets.py  stat_utils.py  system_test.py  test_livenet.py  utils.py  visual_utils.py
livenet/backend/: __init__.py  core.py  death.py  observability.py  utils.py
livenet/core/: __init__.py  datasets.py  death.py  graph.py  livenet.py  net_trainer.py  nets.py  observability.py  optimizers.py  test_livenet.py  trainer.py  (+1 more)
old/: cifar10.ipynb  datasets.py  mnist4.ipynb  pr.py  score.txt  test1_old.ipynb
serhii_libs/: simple_log.py
(+9 files in other folders)
